[tool.poetry]
name = "tcp-proxy"
version = "0.1.0"
description = ""
authors = ["Litchi Pi <litchi.pi@proton.me>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
